--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2038,3 +2038,10 @@ display: none;
 }
 }
 
+#communitysearch .pagination {
+  text-align: center;
+}
+
+#communitysearch {
+  background-color: #fff;
+}
