--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1785,7 +1785,9 @@ border-radius: 0;
     max-width: 330px;
     padding-top: 2px;
 }
-
+.maxui-avatar.maxui-little {
+    left: -37px;
+}
 @media (min-width: 1150px) {
  .homepage-hpm1 .homepage-hpm4 {
     margin-left: 19px;
