--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4340,6 +4340,9 @@ label[for="form.ext_editor"] ~ div.widget {
   max-width: 330px;
   padding-top: 2px; }
 
+.maxui-avatar.maxui-little {
+  left: -37px; }
+
 @media (min-width: 1150px) {
   .homepage-hpm1 .homepage-hpm4 {
     margin-left: 19px;
