Modificar css perque surti foto quan entres a una conversa

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1783,7 +1783,7 @@ border-radius: 0;
     max-width: 330px;
     padding-top: 2px;
 }
-.maxui-avatar.maxui-little {
+.maxui-comment .maxui-avatar.maxui-little {
     left: -37px;
 }
 @media (min-width: 1150px) {
