--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4332,7 +4332,7 @@ label[for="form.ext_editor"] ~ div.widget {
   max-width: 330px;
   padding-top: 2px; }
 
-.maxui-avatar.maxui-little {
+.maxui-comment .maxui-avatar.maxui-little {
   left: -37px; }
 
 @media (min-width: 1150px) {
