--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2080,3 +2080,21 @@ display: none;
   background-color: #fff;
 }
 
+.disabled-implico {
+    background-color: #ffffff;
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+#joinedUsers{
+  margin-top:60px;
+}
+
+.nexus24_usuari_foto {
+    float: left;
+    margin: 2%;
+    overflow-y: hidden;
+    text-align: center;
+    width: 21%;
+    font-weight: bold;
+}
