--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2080,6 +2080,36 @@ display: none;
   background-color: #fff;
 }
 
+
+
+.title_description{
+  color:#999 !important;
+  font-size: 9px;
+}
+
+.implicat-list{
+  background: #eee none repeat scroll 0 0;
+  border: 1px solid #ddd;
+  font-size: 11px;
+  height: 55px;
+  margin-top: 8px;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0 0 1px white;
+  width: 60px;
+}
+
+.magrada-list{
+  background: #eee none repeat scroll 0 0;
+  border: 1px solid #ddd;
+  font-size: 11px;
+  height: 55px;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0 0 1px white;
+  width: 60px;
+}
+
 .disabled-implico {
     background-color: #ffffff;
     opacity: 0.6;
