--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2128,3 +2128,7 @@ display: none;
     width: 21%;
     font-weight: bold;
 }
+
+i.icon-plone-contentmenu-display-filtered_contents_search_view, i.icon-folder-filtered_contents_search_view {
+  background-position: -407px -168px;}
+
