--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4665,3 +4665,7 @@ label[for="form.ext_editor"] ~ div.widget {
 
 i.icon-plone-contentmenu-display-filtered_contents_search_view, i.icon-folder-filtered_contents_search_view {
   background-position: -407px -168px; }
+
+.contenttreeWindow{
+    z-index: 10000 !important;
+}
