--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1789,6 +1789,9 @@ border-radius: 0;
 .template-profile .photo img {
     margin-bottom: 15px;
 }
+.community-actions {
+    text-align: right;
+}
 
 @media (min-width: 1150px) {
  .homepage-hpm1 .homepage-hpm4 {
