css thinkers portlet

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -762,6 +762,15 @@ border-color: #34495E;
   }
 }
 
+.thinkerslinks,
+.discussionlinks {
+  margin-left: 3px;
+  margin-top: 10px;
+  li {
+    list-style: none;
+  }
+}
+
 .userslinks {
   margin-left: 3px;
   li {
